--- a/project.ipynb
+++ b/project.ipynb
@@ -1,16 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## GROUP 3 - PROJECT 2 - Occupancy Detection\n",
+    "## GROUP 14 - PROJECT-Automating indoor weather adjustments\n",
     "\n",
-    "**Author:** Mahesh\n",
+    "\n",
+    "**Author:** Aman Kumar Soni , Rajershi Yadav\n",
     "\n",
     "**PROJECT DESCRIPTION**\n",
     "\n",
-    "The Occupancy Detection was chosen for this project as it is an ideal candidate for classification tools like Linear Regression and Decision tree. The data set is an experimental data which describes binary classification (room classification) from Temperature, Humidity, Light and CO2. Ground-truth occupancy was obtained from time stamped pictures that were taken every minute. The project would be about measuring the performance of each classification tool, and compare the tools with respect to the data set for accuracy.\n",
+    "The Automating indoor weather adjustment was chosen for this project as it is an ideal candidate for classification tools like Linear Regression and Decision tree. The data set is an experimental data which describes binary classification (room classification) from Temperature, Humidity, Light and CO2. Ground-truth occupancy was obtained from time stamped pictures that were taken every minute. The project would be about measuring the performance of each classification tool, and compare the tools with respect to the data set for accuracy.\n",
     "\n",
     "\n",
     "- **Data set used:** Occupancy Detection Data set \n",
